SERVER-5250: Assertion error in mr_errorhandling.js